--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -5,7 +5,7 @@
       I want
     </p>
 <ul>
-  <li ng-repeat="transaction in outgoing.transactions">
+  <li class="high img-fluid" ng-repeat="transaction in outgoing.transactions">
     <img ui-sref="clothesItemShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}"/>
   </li>
 </ul>
@@ -16,7 +16,7 @@
       They want
     </p>
     <ul>
-    <li ng-repeat="transaction in outgoing.transactions">
+    <li class="high img-fluid" ng-repeat="transaction in outgoing.transactions">
       <img ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
     </li>
   </ul>
@@ -27,7 +27,7 @@
       Status
     </p>
     <ul>
-      <li>
+      <li class="high img-fluid" ng-repeat="transaction in outgoing.transactions">
         <button type="button" ng-click="outgoing.approve()">Accept</button>
         <button type="button">Reject</button>
         <button type="button">Cancel</button>
