--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,10 +15,29 @@ body {
   background: #f5f5f5;
 }
 
-img {
-  width: 250px;
+// img {
+//   width: 250px;
+//   height: 300px;
+// }
+
+ul {
+  li{
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+}
+
+.high {
   height: 300px;
 }
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 667px) {
+  .high {
+    height: 100px;
+  }
 
 h2 {
   margin-top: 5px;
