--- a/src/js/views/users/archiveShow.html
+++ b/src/js/views/users/archiveShow.html
@@ -7,7 +7,7 @@
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in archive.transactions">
         <p>
-          {{transaction.initiator.name}} wants:
+          {{transaction.initiator.firstName}} wants:
         </p>
         <img ui-sref="clothesItemShow({ id : transaction.initial_item._id })" ng-src="{{ transaction.initial_item.image }}"/>
       </li>
@@ -22,7 +22,7 @@
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in archive.transactions">
         <p>
-          {{transaction.responder.name}} wants:
+          {{transaction.responder.firstName}} wants:
         </p>
         <img ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
       </li>
@@ -31,11 +31,11 @@
   </div>
   <div class="swish-index-col col-xs-6 col-md-4">
     <p>
-      Get in touch!
+      Set it up!
     </p>
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in archive.transactions">
-        <a href="mailto:{{transaction.emailAddress}}subject=Let's Swish!"</a>
+        <a class="btn btn-success" href="mailto:{{transaction.emailAddress}}subject=Let's Swish!">Get in touch</a>
       </li>
     </ul>
   </div>
