--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -30,7 +30,7 @@
     </p>
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in outgoing.transactions">
-        <button type="button" ng-click="outgoing.approve()">Accept</button>
+        <button type="button" ng-click="outgoing.approve(transaction._id)">Accept</button>
         <button type="button">Reject</button>
         <button type="button">Cancel</button>
       </li>
