--- a/src/js/views/swishbacks/show.html
+++ b/src/js/views/swishbacks/show.html
@@ -10,5 +10,5 @@
 <ul ng-cloak ng-hide="swishback.item.length" class="list-inline nav-buttons">
 
   <li><a ng-click="swishback.swishback()" class="btn btn-success">SWISHBACK</a></li>
-  <li><a ng-cloak class="btn btn-default" href="javascript:history.back()">Back</a></li>
+  <li><a class="btn btn-default" ui-sref="swishbackIndex( { user : swishback.item.owner } )">Back</a></li>
 </ul>
