--- a/src/js/views/swishbacks/index.html
+++ b/src/js/views/swishbacks/index.html
@@ -1,7 +1,7 @@
 <h1>CHOOSE AN ITEM TO TRADE</h1>
 <h4 id="no-items" ng-hide="swishback.items">No items found</h4>
 <ul class="clothes-index">
-  <li ng-repeat="item in swishback.items track by $index" ui-sref="swishbackShow({ id: item._id })">
+  <li ng-repeat="item in swishback.items track by $index" ui-sref="swishbackShow({ id: item._id, transaction : swishback.transaction_id })">
     <img ng-src="{{item.image}}" alt="" />
     <h4>{{item.title}}</h4>
   </li>
