--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -30,7 +30,7 @@
       <ul>
       <li class="high img-fluid" ng-repeat="transaction in incoming.transactions">
 
-        <button type="button" name="button">Cancel</button>
+        <button type="button" ng-click="incoming.reject(transaction)">Cancel</button>
       </li>
     </ul>
 
