--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -32,7 +32,7 @@
       <li class="high img-fluid" ng-repeat="transaction in outgoing.transactions">
         <button type="button" ng-click="outgoing.approve(transaction._id)">Accept</button>
         <button type="button" ng-click="outgoing.reject(transaction)">Reject</button>
-        <button type="button">Cancel</button>
+        <button type="button" ng-click="outgoing.reject(transaction)">Cancel</button>
       </li>
     </ul>
   </div>
