--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,10 +15,9 @@ body {
   background: #f5f5f5;
 }
 
-// img {
-//   width: 250px;
-//   height: 300px;
-// }
+img {
+  max-height: 300px;
+}
 
 
 ul {
