--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -18,11 +18,10 @@
     </p>
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in outgoing.transactions">
-        <img ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
+        <h2 ng-hide="transaction.response_item">Pending</h2>
+        <img ng-show="transaction.response_item" ui-sref="clothesItemsShow({ id : transaction.response_item._id})" ng-src="{{ transaction.response_item.image }}" />
       </li>
     </ul>
-
-    <h2 ng-hide="transaction.response_item">Pending</h2>
   </div>
   <div class="swish-index-col col-xs-6 col-md-4">
     <p>
@@ -30,8 +29,8 @@
     </p>
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in outgoing.transactions">
-        <button type="button" ng-click="outgoing.approve(transaction._id)">Accept</button>
-        <button type="button" ng-click="outgoing.reject(transaction)">Reject</button>
+        <button type="button" ng-show="transaction.response_item" ng-click="outgoing.approve(transaction._id)">Accept</button>
+        <button type="button" ng-show="transaction.response_item" ng-click="outgoing.reject(transaction)">Reject</button>
         <button type="button" ng-click="outgoing.reject(transaction)">Cancel</button>
       </li>
     </ul>
