--- a/src/js/views/users/archiveShow.html
+++ b/src/js/views/users/archiveShow.html
@@ -35,9 +35,9 @@
     </p>
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in archive.transactions">
-        <a class="btn btn-success" href="mailto:{{transaction.emailAddress}}?subject=Let's swish!"">Get in touch</a>
+        <a class="btn btn-success" href="mailto:{{transaction.emailAddress}}?subject=Let's swish!">Get in touch</a>
       </li>
     </ul>
   </div>
-
+<h4 ng-hide="archive.transactions.length">You haven't completed any swishes yet!</h4>
 </div>
