--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,6 @@
 @import "bower";
+@import "partials/media-query";
+@import "partials/in-out-box";
 
 html {
   // overflow: scroll;
@@ -14,35 +16,6 @@ body {
   font-weight: 300;
   background: #f5f5f5;
 }
-
-// img {
-//   max-height: 300px;
-// }
-
-
-ul {
-  list-style: none;
-  li{
-    img {
-      max-width: 90%;
-      height: auto;
-      background-size: contain;
-    }
-  }
-}
-
-.high {
-  height: 300px;
-}
-@media only screen
-and (min-device-width : 375px)
-and (max-device-width : 667px) {
-  .high {
-    height: 100px;
-  }
-
-}
-
 
 h2 {
   margin-top: 5px;
@@ -60,6 +33,8 @@ main {
 a#mobile-logo {
   display: none;
 }
+
+
 
 header {
   background: #333;
@@ -115,72 +90,7 @@ div.home-page {
   }
 }
 
-@media only screen
-and (min-device-width : 375px)
-and (max-device-width : 667px) {
-  .navbar .navbar-nav {
-    display: inline-block;
-    float: none;
-    vertical-align: top;
-    a {
-      padding: 0;
-      text-transform: uppercase;
-      text-decoration: underline;
-      font-weight: 500;
-    }
-  }
-  .navbar .navbar-collapse {
-    text-align: center;
-  }
-  a#active-logo{
-    display: none;
-  }
-  a#menu-toggle, #sidebar-nav {
-    display: none;
-  }
-  a#mobile-logo {
-    display: inline;
-  }
-  h2 {
-    margin: 0;
-  }
-  div.home-page {
-    padding-top: 0;
-    background: none;
-    form {
-      padding-top: 5px;
-      padding-bottom: 0;
-      width: 100%;
-    }
-  }
-  header {
-    a.navbar-brand {
-      height: 50px;
-      line-height: 50px;
-      padding: 0;
-    }
-  }
-  .navbar-toggle {
-    position: relative;
-    float: right;
-    padding: 9px 10px;
-    margin-top: 8px;
-    margin-right: 15px;
-    margin-bottom: 8px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    border-radius: 4px;
-  }
-  form.add-item{
-    width: 300px;
-  }
-  ul.clothes-index {
-    li.ng-scope {
-      display: block;
-      text-align: center;
-    }
-  }
-}
+
 
 h4#no-items {
   margin-left: 30px;
