--- a/src/js/views/users/outgoingShow.html
+++ b/src/js/views/users/outgoingShow.html
@@ -29,9 +29,9 @@
     </p>
     <ul>
       <li class="high img-fluid" ng-repeat="transaction in outgoing.transactions">
-        <button type="button" ng-show="transaction.response_item" ng-click="outgoing.approve(transaction._id)">Accept</button>
-        <button type="button" ng-show="transaction.response_item" ng-click="outgoing.reject(transaction)">Reject</button>
-        <button type="button" ng-click="outgoing.reject(transaction)">Cancel</button>
+        <button type="button" class="btn btn-outline-secondary" ng-show="transaction.response_item" ng-click="outgoing.approve(transaction._id)">Accept</button>
+        <button type="button" class="btn btn-outline-secondary" ng-show="transaction.response_item" ng-click="outgoing.reject(transaction)">Reject</button>
+        <button type="button" class="btn btn-outline-secondary" ng-click="outgoing.reject(transaction)">Cancel</button>
       </li>
     </ul>
   </div>
