--- a/src/scss/partials/_in-out-box.scss
+++ b/src/scss/partials/_in-out-box.scss
@@ -1,16 +1,45 @@
-ul {
-  list-style: none;
-  li.high {
-    height: 300px;
-    img {
-      max-width: 90%;
-      height: auto;
-      display: block;
-      background-size: contain;
-    }
-    button {
-      display: block;
-      margin: 0 auto;
+.inbox {
+  margin: 0 auto;
+  text-align: center;
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    li {
+      margin: 5px;
+      border: 1px solid #333;
+
+      .row {
+        .one, .two, .three {
+          height: 450px;
+
+          .image-container {
+            margin: 40px auto;
+            width: 300px;
+            height: 300px;
+
+            overflow: hidden;
+
+            img {
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+
+        .three {
+          position: relative;
+          
+          .container {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+          }
+        }
+      }
     }
   }
 }
