--- a/src/scss/partials/_inbox-outbox.scss
+++ b/src/scss/partials/_inbox-outbox.scss
@@ -18,8 +18,7 @@
             overflow: hidden;
 
             img {
-              // width: 100%;
-              width: auto;
+              width: 100%;
               height: 100%;
             }
           }
