--- a/src/js/views/users/incomingShow.html
+++ b/src/js/views/users/incomingShow.html
@@ -1,6 +1,6 @@
 <div class="inbox">
   <h2>INBOX</h2>
-
+  <h4 ng-hide="incoming.transactions.length">No incoming swishes to show</h4>
   <ul>
     <li ng-repeat="transaction in incoming.transactions">
       <div class="row">
