--- a/src/scss/partials/_media-query.scss
+++ b/src/scss/partials/_media-query.scss
@@ -93,7 +93,9 @@ and (max-device-width : 667px) {
               }
             }
           }
-
+          a.archive-three {
+            margin: 90px auto 0 auto;
+          }
           .three {
             margin: 40px auto;
             button {
